# vote-investigation

./: LICENSE  README.md  analysis.ipynb  plot_tests.ipynb  pyproject.toml
data/: Oakland County 2016.csv
data/2016-General-PrecinctLevel/: 2016-General-Jefferson.xlsx  2016-General-Tuscaloosa.xls
