[tool.poetry]
name = "vote-investigation"
version = "0.1.0"
description = ""
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
xlrd = "^1.2.0"
statsmodels = "^0.12.1"
plotly = "^5.8.0"
dash = "^2.4.1"
dash-bootstrap-components = "^1.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
ipykernel = "^5.3.4"
seaborn = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
